--- a/src/styles/Testimonials.css
+++ b/src/styles/Testimonials.css
@@ -83,7 +83,7 @@
 .testimonial-author h4 {
     font-size: 1rem;
     margin-bottom: 0.2rem;
-    color: white;
+    color: var(--color-text);
 }
 
 .testimonial-author p {
